# neural_nets_tinkering

./: .gitignore  README.md  cuda_approach.py  main.py  pyproject.toml  raw_python_approach.py
basic_matmul/: matrix_types.py  numpy_approach.py
nnfs/: first_neurlal_net.py
