[project]
name = "neural-nets-tinkering"
version = "0.1.0"
description = "Small study project for learning neural networks and CUDA-backed tensor operations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "ruff>=0.15.12",
    "torch",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
